# itmo-masters

./: .gitignore  QUICKSTART.md  README.md  env.example  pyproject.toml  requirements.txt
src/maga/: __init__.py  config.py  program_analyzer.py  run_bot.py  telegram_bot.py  web_parser.py
